--- a/book.css
+++ b/book.css
@@ -55,6 +55,29 @@ h1.title {
         border: none;
 }
 
+.example {
+        font-size: 100%;
+        background-color: #ccfff2;
+        border: none;
+}
+
+.note {
+        font-size: 100%;
+        background-color: #defcf6;
+        border: none;
+}
+
+.definition {
+        font-size: 100%;
+        background-color: #ccfff2;
+        border: none;
+}
+
+.exercise {
+        font-size: 100%;
+        background-color: #ccfff2;
+        border: none;
+}
 
 dt code {
         font-weight: bold;
@@ -62,8 +85,6 @@ dt code {
 dd p {
         margin-top: 0;
 }
-
-
 
 table {
     width: 100%;
