--- a/book/book.css
+++ b/book/book.css
@@ -57,52 +57,64 @@ h1.title {
 
 .example {
         font-size: 100%;
-	border-left-style: solid;
-	border-left-color: coral;
-	padding-left: 9px;
+	      border-left-style: solid;
+	      border-left-color: coral;
+	      padding-left: 9px;
 }
 
 .note {
         font-size: 100%;
-	border-left-style: solid;
-	border-left-color: lightgrey;
-	padding-left: 9px;
+	      border-left-style: solid;
+	      border-left-color: lightgrey;
+	      padding-left: 9px;
 }
 
 .definition {
         font-size: 100%;
-	border-left-style: solid;
-	border-left-color: black;
-	padding-left: 9px;
+	      border-left-style: solid;
+	      border-left-color: black;
+	      padding-left: 9px;
 }
 
 .fact {
         font-size: 100%;
-	border-left-style: solid;
-	border-left-color: black;
-	padding-left: 9px;
+	      border-left-style: solid;
+	      border-left-color: black;
+	      padding-left: 9px;
 }
 
 .theorem {
         font-size: 100%;
-	border-left-style: solid;
-	border-left-color: black;
-	padding-left: 9px;
+	      border-left-style: solid;
+	      border-left-color: black;
+	      padding-left: 9px;
 }
 
 .proof {
         font-size: 100%;
-	border-left-style: solid;
-	border-left-color: black;
-	border-left-style: dotted;
-	padding-left: 9px;
+	      border-left-style: solid;
+	      border-left-color: black;
+	      border-left-style: dotted;
+	      padding-left: 9px;
 }
 
 .exercise {
         font-size: 100%;
-	border-left-style: solid;
-	border-left-color: red;
-	padding-left: 9px;
+	      border-left-style: solid;
+	      border-left-color: red;
+	      padding-left: 9px;
+}
+
+.todo {
+        font-size: 100%;
+	      background-color: coral;
+}
+
+.warning {
+        font-size: 100%;
+	      border-left-style: solid;
+	      border-left-color: pink;
+	      padding-left: 9px;
 }
 
 dt code {
