--- a/book/book.css
+++ b/book/book.css
@@ -49,7 +49,7 @@ h1.title {
   text-align: center;
 }
 
-!.date {
+.date {
         font-size: 100%;
         text-align: center;
         border: none;
